[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/gui/Theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menu/DuelOptions.gd" type="Script" id=2]

[node name="DuelOptions" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.360784 )
script = ExtResource( 2 )

[node name="DuelCancel" type="Button" parent="."]
margin_right = 120.0
margin_bottom = 60.0
text = "Back"

[node name="Players" type="HBoxContainer" parent="."]
margin_left = 60.0
margin_top = 60.0
margin_right = 580.0
margin_bottom = 100.0
custom_constants/separation = 40

[node name="Player1" type="VBoxContainer" parent="Players"]
margin_right = 240.0
margin_bottom = 224.0
custom_constants/separation = 20

[node name="HeadLabel" type="Label" parent="Players/Player1"]
margin_right = 240.0
margin_bottom = 24.0
rect_min_size = Vector2( 240, 0 )
text = "Player 1"
align = 1
valign = 1

[node name="BowOption" type="OptionButton" parent="Players/Player1"]
margin_top = 44.0
margin_right = 240.0
margin_bottom = 74.0
text = "Bow"
align = 1

[node name="ArrowOption" type="OptionButton" parent="Players/Player1"]
margin_top = 94.0
margin_right = 240.0
margin_bottom = 124.0
text = "Arrow"
align = 1

[node name="BannerOption" type="OptionButton" parent="Players/Player1"]
margin_top = 144.0
margin_right = 240.0
margin_bottom = 174.0
text = "Banner"
align = 1

[node name="HatOption" type="OptionButton" parent="Players/Player1"]
margin_top = 194.0
margin_right = 240.0
margin_bottom = 224.0
text = "Helmet"
align = 1

[node name="Player2" type="VBoxContainer" parent="Players"]
margin_left = 280.0
margin_right = 520.0
margin_bottom = 224.0
custom_constants/separation = 20

[node name="HeadLabel" type="Label" parent="Players/Player2"]
margin_right = 240.0
margin_bottom = 24.0
rect_min_size = Vector2( 240, 0 )
text = "Player 2"
align = 1
valign = 1

[node name="BowOption" type="OptionButton" parent="Players/Player2"]
margin_top = 44.0
margin_right = 240.0
margin_bottom = 74.0
text = "Bow"
align = 1

[node name="ArrowOption" type="OptionButton" parent="Players/Player2"]
margin_top = 94.0
margin_right = 240.0
margin_bottom = 124.0
text = "Arrow"
align = 1

[node name="BannerOption" type="OptionButton" parent="Players/Player2"]
margin_top = 144.0
margin_right = 240.0
margin_bottom = 174.0
text = "Banner"
align = 1

[node name="HatOption" type="OptionButton" parent="Players/Player2"]
margin_top = 194.0
margin_right = 240.0
margin_bottom = 224.0
text = "Helmet"
align = 1

[node name="Start" type="Button" parent="."]
margin_left = 240.0
margin_top = 300.0
margin_right = 400.0
margin_bottom = 360.0
rect_min_size = Vector2( 120, 40 )
text = "Start"

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 120.0
margin_right = 120.0
margin_bottom = 120.0

[node name="DuelType" type="HBoxContainer" parent="."]
margin_left = 400.0
margin_right = 540.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="DuelType"]
margin_right = 60.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 40 )
text = "Vs BOT"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="DuelType"]
margin_left = 64.0
margin_right = 140.0
margin_bottom = 40.0

[connection signal="pressed" from="DuelCancel" to="." method="_on_DuelCancel_pressed"]
